// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon props should render type 'audio-file' with prop background 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="25"
  viewBox="0 0 32 32"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="16"
    cy="16"
    fill="currentColor"
    r="16"
  />
   
  <path
    d="M16 8.5V16.2333C15.6083 16.0917 15.1917 16 14.75 16C12.675 16 11 17.675 11 19.75C11 21.825 12.675 23.5 14.75 23.5C16.675 23.5 18.25 22.0417 18.4583 20.1667H18.5V11H21.8333V8.5H16Z"
    fill="#fff"
  />
</svg>
`;

exports[`Icon props should render type 'audio-file' with prop color 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="25"
  viewBox="0 0 32 32"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="16"
    cy="16"
    fill="#fff"
    r="16"
  />
   
  <path
    d="M16 8.5V16.2333C15.6083 16.0917 15.1917 16 14.75 16C12.675 16 11 17.675 11 19.75C11 21.825 12.675 23.5 14.75 23.5C16.675 23.5 18.25 22.0417 18.4583 20.1667H18.5V11H21.8333V8.5H16Z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'audio-file' with prop size 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="20"
  viewBox="0 0 32 32"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="16"
    cy="16"
    fill="currentColor"
    r="16"
  />
   
  <path
    d="M16 8.5V16.2333C15.6083 16.0917 15.1917 16 14.75 16C12.675 16 11 17.675 11 19.75C11 21.825 12.675 23.5 14.75 23.5C16.675 23.5 18.25 22.0417 18.4583 20.1667H18.5V11H21.8333V8.5H16Z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'backwards' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="48.589999999999996"
  version="1.1"
  viewBox="0 0 37 32"
  width="43"
  xml:space="preserve"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g>
    <g
      transform="translate(2.000000, -9.000000)"
    >
      <g
        transform="translate(0.000000, 10.000000)"
      >
        <path
          d="M32.3,14.9c0-7.3-6-13.3-13.3-13.3C12.5,1.7,6.8,6.5,5.9,13l-0.1,0.9H2.7l4.1,5.5l4.1-5.5H7.8l0.2-1.2
          c1.1-5.2,5.7-9,11-9c6.2,0,11.2,5,11.2,11.2c0,5.8-4.5,10.6-10.2,11.2v2.1C26.9,27.7,32.3,21.9,32.3,14.9z"
          fill="currentColor"
        />
         
        <g>
          <path
            d="M17.2,19.5h-1.4v-7.2H14v-1l3.2-0.3V19.5z M18.7,15.7l0.5-4.7h4.5v1.2h-3.3l-0.3,2.1
            c0.2-0.1,0.4-0.2,0.6-0.3c0.2-0.1,0.5-0.1,0.7-0.1c0.8,0,1.4,0.2,1.9,0.8c0.5,0.5,0.7,1.2,0.7,2.1c0,0.8-0.2,1.5-0.7,2.1
            c-0.5,0.5-1.2,0.8-2.1,0.8c-0.8,0-1.4-0.2-1.9-0.6c-0.5-0.4-0.8-1-0.7-1.8l0,0l1.3,0c0,0.4,0.1,0.7,0.4,1
            c0.2,0.2,0.6,0.3,0.9,0.3c0.4,0,0.8-0.2,1-0.5c0.2-0.3,0.3-0.7,0.3-1.2c0-0.5-0.1-0.9-0.4-1.3c-0.2-0.3-0.6-0.5-1-0.5
            c-0.4,0-0.7,0.1-0.9,0.2c-0.2,0.1-0.3,0.3-0.4,0.5L18.7,15.7z"
            fill="currentColor"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'backwards' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="48.589999999999996"
  version="1.1"
  viewBox="0 0 37 32"
  width="43"
  xml:space="preserve"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g>
    <g
      transform="translate(2.000000, -9.000000)"
    >
      <g
        transform="translate(0.000000, 10.000000)"
      >
        <path
          d="M32.3,14.9c0-7.3-6-13.3-13.3-13.3C12.5,1.7,6.8,6.5,5.9,13l-0.1,0.9H2.7l4.1,5.5l4.1-5.5H7.8l0.2-1.2
          c1.1-5.2,5.7-9,11-9c6.2,0,11.2,5,11.2,11.2c0,5.8-4.5,10.6-10.2,11.2v2.1C26.9,27.7,32.3,21.9,32.3,14.9z"
          fill="#fff"
        />
         
        <g>
          <path
            d="M17.2,19.5h-1.4v-7.2H14v-1l3.2-0.3V19.5z M18.7,15.7l0.5-4.7h4.5v1.2h-3.3l-0.3,2.1
            c0.2-0.1,0.4-0.2,0.6-0.3c0.2-0.1,0.5-0.1,0.7-0.1c0.8,0,1.4,0.2,1.9,0.8c0.5,0.5,0.7,1.2,0.7,2.1c0,0.8-0.2,1.5-0.7,2.1
            c-0.5,0.5-1.2,0.8-2.1,0.8c-0.8,0-1.4-0.2-1.9-0.6c-0.5-0.4-0.8-1-0.7-1.8l0,0l1.3,0c0,0.4,0.1,0.7,0.4,1
            c0.2,0.2,0.6,0.3,0.9,0.3c0.4,0,0.8-0.2,1-0.5c0.2-0.3,0.3-0.7,0.3-1.2c0-0.5-0.1-0.9-0.4-1.3c-0.2-0.3-0.6-0.5-1-0.5
            c-0.4,0-0.7,0.1-0.9,0.2c-0.2,0.1-0.3,0.3-0.4,0.5L18.7,15.7z"
            fill="#fff"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'backwards' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="22.599999999999998"
  version="1.1"
  viewBox="0 0 37 32"
  width="20"
  xml:space="preserve"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g>
    <g
      transform="translate(2.000000, -9.000000)"
    >
      <g
        transform="translate(0.000000, 10.000000)"
      >
        <path
          d="M32.3,14.9c0-7.3-6-13.3-13.3-13.3C12.5,1.7,6.8,6.5,5.9,13l-0.1,0.9H2.7l4.1,5.5l4.1-5.5H7.8l0.2-1.2
          c1.1-5.2,5.7-9,11-9c6.2,0,11.2,5,11.2,11.2c0,5.8-4.5,10.6-10.2,11.2v2.1C26.9,27.7,32.3,21.9,32.3,14.9z"
          fill="currentColor"
        />
         
        <g>
          <path
            d="M17.2,19.5h-1.4v-7.2H14v-1l3.2-0.3V19.5z M18.7,15.7l0.5-4.7h4.5v1.2h-3.3l-0.3,2.1
            c0.2-0.1,0.4-0.2,0.6-0.3c0.2-0.1,0.5-0.1,0.7-0.1c0.8,0,1.4,0.2,1.9,0.8c0.5,0.5,0.7,1.2,0.7,2.1c0,0.8-0.2,1.5-0.7,2.1
            c-0.5,0.5-1.2,0.8-2.1,0.8c-0.8,0-1.4-0.2-1.9-0.6c-0.5-0.4-0.8-1-0.7-1.8l0,0l1.3,0c0,0.4,0.1,0.7,0.4,1
            c0.2,0.2,0.6,0.3,0.9,0.3c0.4,0,0.8-0.2,1-0.5c0.2-0.3,0.3-0.7,0.3-1.2c0-0.5-0.1-0.9-0.4-1.3c-0.2-0.3-0.6-0.5-1-0.5
            c-0.4,0-0.7,0.1-0.9,0.2c-0.2,0.1-0.3,0.3-0.4,0.5L18.7,15.7z"
            fill="currentColor"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'calendar' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="20"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M 2,3 2,17 18,17 18,3 2,3 Z M 17,16 3,16 3,8 17,8 17,16 Z M 17,7 3,7 3,4 17,4 17,7 Z"
    fill="currentColor"
  />
   
  <rect
    fill="currentColor"
    height="3"
    width="1"
    x="6"
    y="2"
  />
   
  <rect
    fill="currentColor"
    height="3"
    width="1"
    x="13"
    y="2"
  />
</svg>
`;

exports[`Icon props should render type 'calendar' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M 2,3 2,17 18,17 18,3 2,3 Z M 17,16 3,16 3,8 17,8 17,16 Z M 17,7 3,7 3,4 17,4 17,7 Z"
    fill="#fff"
  />
   
  <rect
    fill="#fff"
    height="3"
    width="1"
    x="6"
    y="2"
  />
   
  <rect
    fill="#fff"
    height="3"
    width="1"
    x="13"
    y="2"
  />
</svg>
`;

exports[`Icon props should render type 'calendar' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M 2,3 2,17 18,17 18,3 2,3 Z M 17,16 3,16 3,8 17,8 17,16 Z M 17,7 3,7 3,4 17,4 17,7 Z"
    fill="currentColor"
  />
   
  <rect
    fill="currentColor"
    height="3"
    width="1"
    x="6"
    y="2"
  />
   
  <rect
    fill="currentColor"
    height="3"
    width="1"
    x="13"
    y="2"
  />
</svg>
`;

exports[`Icon props should render type 'chapter' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="25"
  stroke-linejoin="round"
  stroke-miterlimit="1.5"
  viewBox="0 0 50 50"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M8 15h5m4 0h25M8 25h5m4 0h25M8 35h5m4 0h25"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon props should render type 'chapter' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="25"
  stroke-linejoin="round"
  stroke-miterlimit="1.5"
  viewBox="0 0 50 50"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M8 15h5m4 0h25M8 25h5m4 0h25M8 35h5m4 0h25"
    fill="none"
    stroke="#fff"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon props should render type 'chapter' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="20"
  stroke-linejoin="round"
  stroke-miterlimit="1.5"
  viewBox="0 0 50 50"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M8 15h5m4 0h25M8 25h5m4 0h25M8 35h5m4 0h25"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon props should render type 'clock' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="20"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="10"
    cy="10"
    fill="none"
    r="9"
    stroke="currentColor"
    stroke-width="1.1"
  />
   
  <rect
    height="7"
    width="1"
    x="9"
    y="4"
  />
   
  <path
    d="M13.018,14.197 L9.445,10.625"
    fill="none"
    stroke="currentColor"
    stroke-width="1.1"
  />
</svg>
`;

exports[`Icon props should render type 'clock' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="10"
    cy="10"
    fill="none"
    r="9"
    stroke="#fff"
    stroke-width="1.1"
  />
   
  <rect
    height="7"
    width="1"
    x="9"
    y="4"
  />
   
  <path
    d="M13.018,14.197 L9.445,10.625"
    fill="none"
    stroke="#fff"
    stroke-width="1.1"
  />
</svg>
`;

exports[`Icon props should render type 'clock' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="10"
    cy="10"
    fill="none"
    r="9"
    stroke="currentColor"
    stroke-width="1.1"
  />
   
  <rect
    height="7"
    width="1"
    x="9"
    y="4"
  />
   
  <path
    d="M13.018,14.197 L9.445,10.625"
    fill="none"
    stroke="currentColor"
    stroke-width="1.1"
  />
</svg>
`;

exports[`Icon props should render type 'close' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="16"
  version="1.1"
  viewBox="329 30 16 16"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <rect
    fill="currentColor"
    fill-rule="evenodd"
    height="20"
    stroke="none"
    transform="translate(337.000000, 38.000000) rotate(-315.000000) translate(-337.000000, -38.000000) "
    width="2"
    x="336"
    y="28"
  />
   
  <rect
    fill="currentColor"
    fill-rule="evenodd"
    height="20"
    stroke="none"
    transform="translate(337.000000, 38.000000) rotate(-45.000000) translate(-337.000000, -38.000000) "
    width="2"
    x="336"
    y="28"
  />
</svg>
`;

exports[`Icon props should render type 'close' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="16"
  version="1.1"
  viewBox="329 30 16 16"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <rect
    fill="#fff"
    fill-rule="evenodd"
    height="20"
    stroke="none"
    transform="translate(337.000000, 38.000000) rotate(-315.000000) translate(-337.000000, -38.000000) "
    width="2"
    x="336"
    y="28"
  />
   
  <rect
    fill="#fff"
    fill-rule="evenodd"
    height="20"
    stroke="none"
    transform="translate(337.000000, 38.000000) rotate(-45.000000) translate(-337.000000, -38.000000) "
    width="2"
    x="336"
    y="28"
  />
</svg>
`;

exports[`Icon props should render type 'close' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  version="1.1"
  viewBox="329 30 16 16"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <rect
    fill="currentColor"
    fill-rule="evenodd"
    height="20"
    stroke="none"
    transform="translate(337.000000, 38.000000) rotate(-315.000000) translate(-337.000000, -38.000000) "
    width="2"
    x="336"
    y="28"
  />
   
  <rect
    fill="currentColor"
    fill-rule="evenodd"
    height="20"
    stroke="none"
    transform="translate(337.000000, 38.000000) rotate(-45.000000) translate(-337.000000, -38.000000) "
    width="2"
    x="336"
    y="28"
  />
</svg>
`;

exports[`Icon props should render type 'content-chapter' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="20"
  ratio="1"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    fill="currentColor"
    height="1"
    width="12"
    x="6"
    y="4"
  />
   
  <rect
    fill="currentColor"
    height="1"
    width="12"
    x="6"
    y="9"
  />
   
  <rect
    fill="currentColor"
    height="1"
    width="12"
    x="6"
    y="14"
  />
   
  <rect
    fill="currentColor"
    height="1"
    width="2"
    x="2"
    y="4"
  />
   
  <rect
    fill="currentColor"
    height="1"
    width="2"
    x="2"
    y="9"
  />
   
  <rect
    fill="currentColor"
    height="1"
    width="2"
    x="2"
    y="14"
  />
</svg>
`;

exports[`Icon props should render type 'content-chapter' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  ratio="1"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    fill="#fff"
    height="1"
    width="12"
    x="6"
    y="4"
  />
   
  <rect
    fill="#fff"
    height="1"
    width="12"
    x="6"
    y="9"
  />
   
  <rect
    fill="#fff"
    height="1"
    width="12"
    x="6"
    y="14"
  />
   
  <rect
    fill="#fff"
    height="1"
    width="2"
    x="2"
    y="4"
  />
   
  <rect
    fill="#fff"
    height="1"
    width="2"
    x="2"
    y="9"
  />
   
  <rect
    fill="#fff"
    height="1"
    width="2"
    x="2"
    y="14"
  />
</svg>
`;

exports[`Icon props should render type 'content-chapter' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  ratio="1"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    fill="currentColor"
    height="1"
    width="12"
    x="6"
    y="4"
  />
   
  <rect
    fill="currentColor"
    height="1"
    width="12"
    x="6"
    y="9"
  />
   
  <rect
    fill="currentColor"
    height="1"
    width="12"
    x="6"
    y="14"
  />
   
  <rect
    fill="currentColor"
    height="1"
    width="2"
    x="2"
    y="4"
  />
   
  <rect
    fill="currentColor"
    height="1"
    width="2"
    x="2"
    y="9"
  />
   
  <rect
    fill="currentColor"
    height="1"
    width="2"
    x="2"
    y="14"
  />
</svg>
`;

exports[`Icon props should render type 'content-episode' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="20"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M2.7270036 9.5946722h16.035961v8.6017895H2.7270036z"
    fill="none"
    stroke="currentColor"
    stroke-width=".82229346"
  />
   
  <path
    d="M.93963873 6.5861716h16.42688v2.0641451h-16.42688z"
    fill="none"
    stroke="currentColor"
    stroke-width=".79365057"
    transform="matrix(.96632 -.25733 .22394 .9746 0 0)"
  />
   
  <path
    d="M3.3859545 8.5247829a.84745765.80508476 0 0 1-.7612853.8781919.84745765.80508476 0 0 1-.9256172-.7218293.84745765.80508476 0 0 1 .7583533-.8804784.84745765.80508476 0 0 1 .9280194.71904"
    fill="#fff"
    fill-rule="evenodd"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width=".82200003"
  />
   
  <path
    d="M2.6609156 9.4405775h16.118847v2.2205417H2.6609156z"
    fill="#fff"
    fill-rule="evenodd"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width=".72010225"
  />
   
  <path
    d="M6.0140037 11.598303l1.9198581-2.2124744M3.3868851 11.598303l1.9198581-2.2124744m3.1648876 2.3819664l1.9198582-2.2124749m.70726 2.1277289l1.919858-2.2124747m.792007 2.1277287l1.919858-2.2124745m.622514 2.2124745l1.919858-2.2124745"
    fill="none"
    stroke="currentColor"
    stroke-width="1.10197592"
  />
</svg>
`;

exports[`Icon props should render type 'content-episode' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M2.7270036 9.5946722h16.035961v8.6017895H2.7270036z"
    fill="none"
    stroke="#fff"
    stroke-width=".82229346"
  />
   
  <path
    d="M.93963873 6.5861716h16.42688v2.0641451h-16.42688z"
    fill="none"
    stroke="#fff"
    stroke-width=".79365057"
    transform="matrix(.96632 -.25733 .22394 .9746 0 0)"
  />
   
  <path
    d="M3.3859545 8.5247829a.84745765.80508476 0 0 1-.7612853.8781919.84745765.80508476 0 0 1-.9256172-.7218293.84745765.80508476 0 0 1 .7583533-.8804784.84745765.80508476 0 0 1 .9280194.71904"
    fill="#fff"
    fill-rule="evenodd"
    stroke="#fff"
    stroke-linecap="round"
    stroke-width=".82200003"
  />
   
  <path
    d="M2.6609156 9.4405775h16.118847v2.2205417H2.6609156z"
    fill="#fff"
    fill-rule="evenodd"
    stroke="#fff"
    stroke-linecap="round"
    stroke-width=".72010225"
  />
   
  <path
    d="M6.0140037 11.598303l1.9198581-2.2124744M3.3868851 11.598303l1.9198581-2.2124744m3.1648876 2.3819664l1.9198582-2.2124749m.70726 2.1277289l1.919858-2.2124747m.792007 2.1277287l1.919858-2.2124745m.622514 2.2124745l1.919858-2.2124745"
    fill="none"
    stroke="#fff"
    stroke-width="1.10197592"
  />
</svg>
`;

exports[`Icon props should render type 'content-episode' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M2.7270036 9.5946722h16.035961v8.6017895H2.7270036z"
    fill="none"
    stroke="currentColor"
    stroke-width=".82229346"
  />
   
  <path
    d="M.93963873 6.5861716h16.42688v2.0641451h-16.42688z"
    fill="none"
    stroke="currentColor"
    stroke-width=".79365057"
    transform="matrix(.96632 -.25733 .22394 .9746 0 0)"
  />
   
  <path
    d="M3.3859545 8.5247829a.84745765.80508476 0 0 1-.7612853.8781919.84745765.80508476 0 0 1-.9256172-.7218293.84745765.80508476 0 0 1 .7583533-.8804784.84745765.80508476 0 0 1 .9280194.71904"
    fill="#fff"
    fill-rule="evenodd"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width=".82200003"
  />
   
  <path
    d="M2.6609156 9.4405775h16.118847v2.2205417H2.6609156z"
    fill="#fff"
    fill-rule="evenodd"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width=".72010225"
  />
   
  <path
    d="M6.0140037 11.598303l1.9198581-2.2124744M3.3868851 11.598303l1.9198581-2.2124744m3.1648876 2.3819664l1.9198582-2.2124749m.70726 2.1277289l1.919858-2.2124747m.792007 2.1277287l1.919858-2.2124745m.622514 2.2124745l1.919858-2.2124745"
    fill="none"
    stroke="currentColor"
    stroke-width="1.10197592"
  />
</svg>
`;

exports[`Icon props should render type 'content-playtime' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="20"
  ratio="1"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <polygon
    fill="none"
    points="8.5 7 13.5 10 8.5 13"
    stroke="currentColor"
    stroke-width="1.1"
  />
   
  <circle
    cx="10"
    cy="10"
    fill="none"
    r="9"
    stroke="currentColor"
    stroke-width="1.1"
  />
</svg>
`;

exports[`Icon props should render type 'content-playtime' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  ratio="1"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <polygon
    fill="none"
    points="8.5 7 13.5 10 8.5 13"
    stroke="#fff"
    stroke-width="1.1"
  />
   
  <circle
    cx="10"
    cy="10"
    fill="none"
    r="9"
    stroke="#fff"
    stroke-width="1.1"
  />
</svg>
`;

exports[`Icon props should render type 'content-playtime' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  ratio="1"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <polygon
    fill="none"
    points="8.5 7 13.5 10 8.5 13"
    stroke="currentColor"
    stroke-width="1.1"
  />
   
  <circle
    cx="10"
    cy="10"
    fill="none"
    r="9"
    stroke="currentColor"
    stroke-width="1.1"
  />
</svg>
`;

exports[`Icon props should render type 'content-show' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="20"
  ratio="1"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <polygon
    fill="none"
    points="10 2 12.63 7.27 18.5 8.12 14.25 12.22 15.25 18 10 15.27 4.75 18 5.75 12.22 1.5 8.12 7.37 7.27"
    stroke="currentColor"
    stroke-width="1.01"
  />
</svg>
`;

exports[`Icon props should render type 'content-show' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  ratio="1"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <polygon
    fill="none"
    points="10 2 12.63 7.27 18.5 8.12 14.25 12.22 15.25 18 10 15.27 4.75 18 5.75 12.22 1.5 8.12 7.37 7.27"
    stroke="#fff"
    stroke-width="1.01"
  />
</svg>
`;

exports[`Icon props should render type 'content-show' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  ratio="1"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <polygon
    fill="none"
    points="10 2 12.63 7.27 18.5 8.12 14.25 12.22 15.25 18 10 15.27 4.75 18 5.75 12.22 1.5 8.12 7.37 7.27"
    stroke="currentColor"
    stroke-width="1.01"
  />
</svg>
`;

exports[`Icon props should render type 'copy' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="16"
  viewBox="0 0 24 24"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M13.508 11.504l.93-2.494 2.998 6.268-6.31 2.779.894-2.478s-8.271-4.205-7.924-11.58c2.716 5.939 9.412 7.505 9.412 7.505zm7.492-9.504v-2h-21v21h2v-19h19zm-14.633 2c.441.757.958 1.422 1.521 2h14.112v16h-16v-8.548c-.713-.752-1.4-1.615-2-2.576v13.124h20v-20h-17.633z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'copy' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="16"
  viewBox="0 0 24 24"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M13.508 11.504l.93-2.494 2.998 6.268-6.31 2.779.894-2.478s-8.271-4.205-7.924-11.58c2.716 5.939 9.412 7.505 9.412 7.505zm7.492-9.504v-2h-21v21h2v-19h19zm-14.633 2c.441.757.958 1.422 1.521 2h14.112v16h-16v-8.548c-.713-.752-1.4-1.615-2-2.576v13.124h20v-20h-17.633z"
    fill="#fff"
  />
</svg>
`;

exports[`Icon props should render type 'copy' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M13.508 11.504l.93-2.494 2.998 6.268-6.31 2.779.894-2.478s-8.271-4.205-7.924-11.58c2.716 5.939 9.412 7.505 9.412 7.505zm7.492-9.504v-2h-21v21h2v-19h19zm-14.633 2c.441.757.958 1.422 1.521 2h14.112v16h-16v-8.548c-.713-.752-1.4-1.615-2-2.576v13.124h20v-20h-17.633z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'download' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="25"
  stroke-linejoin="round"
  stroke-miterlimit="1.414"
  viewBox="0 0 50 50"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M16 35h-5.525C6.358 35 3 31.688 3 27.594c0-3.749 2.806-6.854 6.44-7.337.184-6.647 5.635-11.96 12.374-11.96 5.773 0 10.649 3.933 11.983 9.246a9.135 9.135 0 0 1 3.703-.782c5.083 0 9.2 4.071 9.2 9.108 0 5.037-4.117 9.108-9.2 9.108L30 35"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
  />
   
  <path
    d="M24.02 42.48l3.537-3.576L29 40.362s-4.221 4.395-5.221 5.335A1.232 1.232 0 0 1 23 46c-.25 0-.531-.123-.721-.302-1-.94-5.279-5.336-5.279-5.336l1.443-1.458 3.537 3.576L22 26h2.04l-.02 16.48"
    fill="currentColor"
    fill-rule="nonzero"
  />
</svg>
`;

exports[`Icon props should render type 'download' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="25"
  stroke-linejoin="round"
  stroke-miterlimit="1.414"
  viewBox="0 0 50 50"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M16 35h-5.525C6.358 35 3 31.688 3 27.594c0-3.749 2.806-6.854 6.44-7.337.184-6.647 5.635-11.96 12.374-11.96 5.773 0 10.649 3.933 11.983 9.246a9.135 9.135 0 0 1 3.703-.782c5.083 0 9.2 4.071 9.2 9.108 0 5.037-4.117 9.108-9.2 9.108L30 35"
    fill="none"
    stroke="#fff"
    stroke-width="2"
  />
   
  <path
    d="M24.02 42.48l3.537-3.576L29 40.362s-4.221 4.395-5.221 5.335A1.232 1.232 0 0 1 23 46c-.25 0-.531-.123-.721-.302-1-.94-5.279-5.336-5.279-5.336l1.443-1.458 3.537 3.576L22 26h2.04l-.02 16.48"
    fill="#fff"
    fill-rule="nonzero"
  />
</svg>
`;

exports[`Icon props should render type 'download' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="20"
  stroke-linejoin="round"
  stroke-miterlimit="1.414"
  viewBox="0 0 50 50"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M16 35h-5.525C6.358 35 3 31.688 3 27.594c0-3.749 2.806-6.854 6.44-7.337.184-6.647 5.635-11.96 12.374-11.96 5.773 0 10.649 3.933 11.983 9.246a9.135 9.135 0 0 1 3.703-.782c5.083 0 9.2 4.071 9.2 9.108 0 5.037-4.117 9.108-9.2 9.108L30 35"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
  />
   
  <path
    d="M24.02 42.48l3.537-3.576L29 40.362s-4.221 4.395-5.221 5.335A1.232 1.232 0 0 1 23 46c-.25 0-.531-.123-.721-.302-1-.94-5.279-5.336-5.279-5.336l1.443-1.458 3.537 3.576L22 26h2.04l-.02 16.48"
    fill="currentColor"
    fill-rule="nonzero"
  />
</svg>
`;

exports[`Icon props should render type 'embed' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="25"
  viewBox="0 0 24 24"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M24 10.935v2.131l-8 3.947v-2.23l5.64-2.783-5.64-2.79v-2.223l8 3.948zm-16 3.848l-5.64-2.783 5.64-2.79v-2.223l-8 3.948v2.131l8 3.947v-2.23zm7.047-10.783h-2.078l-4.011 16h2.073l4.016-16z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'embed' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="25"
  viewBox="0 0 24 24"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M24 10.935v2.131l-8 3.947v-2.23l5.64-2.783-5.64-2.79v-2.223l8 3.948zm-16 3.848l-5.64-2.783 5.64-2.79v-2.223l-8 3.948v2.131l8 3.947v-2.23zm7.047-10.783h-2.078l-4.011 16h2.073l4.016-16z"
    fill="#fff"
  />
</svg>
`;

exports[`Icon props should render type 'embed' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M24 10.935v2.131l-8 3.947v-2.23l5.64-2.783-5.64-2.79v-2.223l8 3.948zm-16 3.848l-5.64-2.783 5.64-2.79v-2.223l-8 3.948v2.131l8 3.947v-2.23zm7.047-10.783h-2.078l-4.011 16h2.073l4.016-16z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'facebook' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="25"
  stroke-linejoin="round"
  stroke-miterlimit="1.414"
  viewBox="0 0 16 16"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15.117 0H.883C.395 0 0 .395 0 .883v14.234c0 .488.395.883.883.883h7.663V9.804H6.46V7.39h2.086V5.607c0-2.066 1.262-3.19 3.106-3.19.883 0 1.642.064 1.863.094v2.16h-1.28c-1 0-1.195.48-1.195 1.18v1.54h2.39l-.31 2.42h-2.08V16h4.077c.488 0 .883-.395.883-.883V.883C16 .395 15.605 0 15.117 0"
    fill="currentColor"
    fill-rule="nonzero"
  />
</svg>
`;

exports[`Icon props should render type 'facebook' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="25"
  stroke-linejoin="round"
  stroke-miterlimit="1.414"
  viewBox="0 0 16 16"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15.117 0H.883C.395 0 0 .395 0 .883v14.234c0 .488.395.883.883.883h7.663V9.804H6.46V7.39h2.086V5.607c0-2.066 1.262-3.19 3.106-3.19.883 0 1.642.064 1.863.094v2.16h-1.28c-1 0-1.195.48-1.195 1.18v1.54h2.39l-.31 2.42h-2.08V16h4.077c.488 0 .883-.395.883-.883V.883C16 .395 15.605 0 15.117 0"
    fill="#fff"
    fill-rule="nonzero"
  />
</svg>
`;

exports[`Icon props should render type 'facebook' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="20"
  stroke-linejoin="round"
  stroke-miterlimit="1.414"
  viewBox="0 0 16 16"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15.117 0H.883C.395 0 0 .395 0 .883v14.234c0 .488.395.883.883.883h7.663V9.804H6.46V7.39h2.086V5.607c0-2.066 1.262-3.19 3.106-3.19.883 0 1.642.064 1.863.094v2.16h-1.28c-1 0-1.195.48-1.195 1.18v1.54h2.39l-.31 2.42h-2.08V16h4.077c.488 0 .883-.395.883-.883V.883C16 .395 15.605 0 15.117 0"
    fill="currentColor"
    fill-rule="nonzero"
  />
</svg>
`;

exports[`Icon props should render type 'forward' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="48.589999999999996"
  version="1.1"
  viewBox="0 0 36 31"
  width="43"
  xml:space="preserve"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g>
    <g
      transform="translate(-143.000000, -9.000000)"
    >
      <g
        transform="translate(144.000000, 10.000000)"
      >
        <path
          d="M30.6,13.2h-3.1l-0.1-0.9C26.5,5.9,20.8,1,14.3,1C7,1,1,7,1,14.3c0,7,5.4,12.7,12.3,13.2v-2.1
          C7.6,24.9,3.1,20.1,3.1,14.3c0-6.2,5-11.2,11.2-11.2c5.3,0,9.9,3.8,11,9l0.2,1.2h-3.1l4.1,5.5L30.6,13.2z"
          fill="currentColor"
        />
         
        <g>
          <path
            d="M10.7,11c-1,0-1.8,0.3-2.5,1L9,12.9c0.5-0.5,1-0.7,1.6-0.7c0.7,0,1.2,0.4,1.2,1.1c0,0.8-0.5,1.2-1.3,1.2
            h-0.4l-0.2,1.1h0.6c0.9,0,1.5,0.3,1.5,1.3c0,0.8-0.6,1.4-1.4,1.4c-0.6,0-1.2-0.2-1.7-0.8L8,18.2c0.6,0.8,1.5,1.2,2.6,1.2
            c1.8,0,2.9-1.1,2.9-2.5c0-1.2-0.8-1.9-1.8-2c0.9-0.3,1.6-0.9,1.6-1.9C13.3,11.9,12.4,11,10.7,11z M17.4,11
            c1.9,0,2.9,1.5,2.9,4.2c0,2.7-1,4.2-2.9,4.2c-1.9,0-2.9-1.5-2.9-4.2C14.6,12.5,15.5,11,17.4,11z M17.4,12.2
            c-0.9,0-1.3,0.8-1.3,3c0,2.3,0.4,3,1.3,3c0.9,0,1.3-0.8,1.3-3C18.8,12.9,18.3,12.2,17.4,12.2z"
            fill="currentColor"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'forward' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="48.589999999999996"
  version="1.1"
  viewBox="0 0 36 31"
  width="43"
  xml:space="preserve"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g>
    <g
      transform="translate(-143.000000, -9.000000)"
    >
      <g
        transform="translate(144.000000, 10.000000)"
      >
        <path
          d="M30.6,13.2h-3.1l-0.1-0.9C26.5,5.9,20.8,1,14.3,1C7,1,1,7,1,14.3c0,7,5.4,12.7,12.3,13.2v-2.1
          C7.6,24.9,3.1,20.1,3.1,14.3c0-6.2,5-11.2,11.2-11.2c5.3,0,9.9,3.8,11,9l0.2,1.2h-3.1l4.1,5.5L30.6,13.2z"
          fill="#fff"
        />
         
        <g>
          <path
            d="M10.7,11c-1,0-1.8,0.3-2.5,1L9,12.9c0.5-0.5,1-0.7,1.6-0.7c0.7,0,1.2,0.4,1.2,1.1c0,0.8-0.5,1.2-1.3,1.2
            h-0.4l-0.2,1.1h0.6c0.9,0,1.5,0.3,1.5,1.3c0,0.8-0.6,1.4-1.4,1.4c-0.6,0-1.2-0.2-1.7-0.8L8,18.2c0.6,0.8,1.5,1.2,2.6,1.2
            c1.8,0,2.9-1.1,2.9-2.5c0-1.2-0.8-1.9-1.8-2c0.9-0.3,1.6-0.9,1.6-1.9C13.3,11.9,12.4,11,10.7,11z M17.4,11
            c1.9,0,2.9,1.5,2.9,4.2c0,2.7-1,4.2-2.9,4.2c-1.9,0-2.9-1.5-2.9-4.2C14.6,12.5,15.5,11,17.4,11z M17.4,12.2
            c-0.9,0-1.3,0.8-1.3,3c0,2.3,0.4,3,1.3,3c0.9,0,1.3-0.8,1.3-3C18.8,12.9,18.3,12.2,17.4,12.2z"
            fill="#fff"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'forward' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="22.599999999999998"
  version="1.1"
  viewBox="0 0 36 31"
  width="20"
  xml:space="preserve"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g>
    <g
      transform="translate(-143.000000, -9.000000)"
    >
      <g
        transform="translate(144.000000, 10.000000)"
      >
        <path
          d="M30.6,13.2h-3.1l-0.1-0.9C26.5,5.9,20.8,1,14.3,1C7,1,1,7,1,14.3c0,7,5.4,12.7,12.3,13.2v-2.1
          C7.6,24.9,3.1,20.1,3.1,14.3c0-6.2,5-11.2,11.2-11.2c5.3,0,9.9,3.8,11,9l0.2,1.2h-3.1l4.1,5.5L30.6,13.2z"
          fill="currentColor"
        />
         
        <g>
          <path
            d="M10.7,11c-1,0-1.8,0.3-2.5,1L9,12.9c0.5-0.5,1-0.7,1.6-0.7c0.7,0,1.2,0.4,1.2,1.1c0,0.8-0.5,1.2-1.3,1.2
            h-0.4l-0.2,1.1h0.6c0.9,0,1.5,0.3,1.5,1.3c0,0.8-0.6,1.4-1.4,1.4c-0.6,0-1.2-0.2-1.7-0.8L8,18.2c0.6,0.8,1.5,1.2,2.6,1.2
            c1.8,0,2.9-1.1,2.9-2.5c0-1.2-0.8-1.9-1.8-2c0.9-0.3,1.6-0.9,1.6-1.9C13.3,11.9,12.4,11,10.7,11z M17.4,11
            c1.9,0,2.9,1.5,2.9,4.2c0,2.7-1,4.2-2.9,4.2c-1.9,0-2.9-1.5-2.9-4.2C14.6,12.5,15.5,11,17.4,11z M17.4,12.2
            c-0.9,0-1.3,0.8-1.3,3c0,2.3,0.4,3,1.3,3c0.9,0,1.3-0.8,1.3-3C18.8,12.9,18.3,12.2,17.4,12.2z"
            fill="currentColor"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'info' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="25"
  stroke-linejoin="round"
  stroke-miterlimit="1.414"
  viewBox="0 0 50 50"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="18.05"
    stroke="currentColor"
    stroke-width="2"
  />
   
  <circle
    cx="25"
    cy="16.6"
    fill="currentColor"
    r="2.749"
  />
   
  <path
    d="M21 22h6v12h2v2h-8v-2h2V24h-2v-2z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'info' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="25"
  stroke-linejoin="round"
  stroke-miterlimit="1.414"
  viewBox="0 0 50 50"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="18.05"
    stroke="#fff"
    stroke-width="2"
  />
   
  <circle
    cx="25"
    cy="16.6"
    fill="#fff"
    r="2.749"
  />
   
  <path
    d="M21 22h6v12h2v2h-8v-2h2V24h-2v-2z"
    fill="#fff"
  />
</svg>
`;

exports[`Icon props should render type 'info' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="20"
  stroke-linejoin="round"
  stroke-miterlimit="1.414"
  viewBox="0 0 50 50"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="25"
    cy="25"
    fill="none"
    r="18.05"
    stroke="currentColor"
    stroke-width="2"
  />
   
  <circle
    cx="25"
    cy="16.6"
    fill="currentColor"
    r="2.749"
  />
   
  <path
    d="M21 22h6v12h2v2h-8v-2h2V24h-2v-2z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'link' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="20"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M10.625,12.375 L7.525,15.475 C6.825,16.175 5.925,16.175 5.225,15.475 L4.525,14.775 C3.825,14.074 3.825,13.175 4.525,12.475 L7.625,9.375"
    fill="none"
    stroke="currentColor"
    stroke-width="1.1"
  />
   
  <path
    d="M9.325,7.375 L12.425,4.275 C13.125,3.575 14.025,3.575 14.724,4.275 L15.425,4.975 C16.125,5.675 16.125,6.575 15.425,7.275 L12.325,10.375"
    fill="none"
    stroke="currentColor"
    stroke-width="1.1"
  />
   
  <path
    d="M7.925,11.875 L11.925,7.975"
    fill="none"
    stroke="currentColor"
    stroke-width="1.1"
  />
</svg>
`;

exports[`Icon props should render type 'link' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M10.625,12.375 L7.525,15.475 C6.825,16.175 5.925,16.175 5.225,15.475 L4.525,14.775 C3.825,14.074 3.825,13.175 4.525,12.475 L7.625,9.375"
    fill="none"
    stroke="#fff"
    stroke-width="1.1"
  />
   
  <path
    d="M9.325,7.375 L12.425,4.275 C13.125,3.575 14.025,3.575 14.724,4.275 L15.425,4.975 C16.125,5.675 16.125,6.575 15.425,7.275 L12.325,10.375"
    fill="none"
    stroke="#fff"
    stroke-width="1.1"
  />
   
  <path
    d="M7.925,11.875 L11.925,7.975"
    fill="none"
    stroke="#fff"
    stroke-width="1.1"
  />
</svg>
`;

exports[`Icon props should render type 'link' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  viewBox="0 0 20 20"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M10.625,12.375 L7.525,15.475 C6.825,16.175 5.925,16.175 5.225,15.475 L4.525,14.775 C3.825,14.074 3.825,13.175 4.525,12.475 L7.625,9.375"
    fill="none"
    stroke="currentColor"
    stroke-width="1.1"
  />
   
  <path
    d="M9.325,7.375 L12.425,4.275 C13.125,3.575 14.025,3.575 14.724,4.275 L15.425,4.975 C16.125,5.675 16.125,6.575 15.425,7.275 L12.325,10.375"
    fill="none"
    stroke="currentColor"
    stroke-width="1.1"
  />
   
  <path
    d="M7.925,11.875 L11.925,7.975"
    fill="none"
    stroke="currentColor"
    stroke-width="1.1"
  />
</svg>
`;

exports[`Icon props should render type 'linkedin' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="25"
  role="img"
  viewBox="0 0 24 24"
  width="25"
>
  <path
    d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'linkedin' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="25"
  role="img"
  viewBox="0 0 24 24"
  width="25"
>
  <path
    d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
    fill="#fff"
  />
</svg>
`;

exports[`Icon props should render type 'linkedin' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  role="img"
  viewBox="0 0 24 24"
  width="20"
>
  <path
    d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'loading' with prop background 1`] = `
<div
  aria-hidden="true"
  background="#fff"
  class="loading-indicator"
>
  <div
    class="loading-bubble first"
    style="background: currentColor; width: 12px; height: 12px;"
  />
   
  <div
    class="loading-bubble second"
    style="background: currentColor; width: 12px; height: 12px;"
  />
   
  <div
    class="loading-bubble third"
    style="background: currentColor; width: 12px; height: 12px;"
  />
</div>
`;

exports[`Icon props should render type 'loading' with prop background 2`] = `
<div
  aria-hidden="true"
  background="#fff"
  class="loading-indicator"
>
  <div
    class="loading-bubble first"
    style="background: currentColor; width: 12px; height: 12px;"
  />
   
  <div
    class="loading-bubble second"
    style="background: currentColor; width: 12px; height: 12px;"
  />
   
  <div
    class="loading-bubble third"
    style="background: currentColor; width: 12px; height: 12px;"
  />
</div>
`;

exports[`Icon props should render type 'loading' with prop color 1`] = `
<div
  aria-hidden="true"
  background="currentColor"
  class="loading-indicator"
>
  <div
    class="loading-bubble first"
    style="background: rgb(255, 255, 255); width: 12px; height: 12px;"
  />
   
  <div
    class="loading-bubble second"
    style="background: rgb(255, 255, 255); width: 12px; height: 12px;"
  />
   
  <div
    class="loading-bubble third"
    style="background: rgb(255, 255, 255); width: 12px; height: 12px;"
  />
</div>
`;

exports[`Icon props should render type 'loading' with prop color 2`] = `
<div
  aria-hidden="true"
  background="currentColor"
  class="loading-indicator"
>
  <div
    class="loading-bubble first"
    style="background: rgb(255, 255, 255); width: 12px; height: 12px;"
  />
   
  <div
    class="loading-bubble second"
    style="background: rgb(255, 255, 255); width: 12px; height: 12px;"
  />
   
  <div
    class="loading-bubble third"
    style="background: rgb(255, 255, 255); width: 12px; height: 12px;"
  />
</div>
`;

exports[`Icon props should render type 'loading' with prop size 1`] = `
<div
  aria-hidden="true"
  background="currentColor"
  class="loading-indicator"
>
  <div
    class="loading-bubble first"
    style="background: currentColor; width: 20px; height: 20px;"
  />
   
  <div
    class="loading-bubble second"
    style="background: currentColor; width: 20px; height: 20px;"
  />
   
  <div
    class="loading-bubble third"
    style="background: currentColor; width: 20px; height: 20px;"
  />
</div>
`;

exports[`Icon props should render type 'loading' with prop size 2`] = `
<div
  aria-hidden="true"
  background="currentColor"
  class="loading-indicator"
>
  <div
    class="loading-bubble first"
    style="background: currentColor; width: 20px; height: 20px;"
  />
   
  <div
    class="loading-bubble second"
    style="background: currentColor; width: 20px; height: 20px;"
  />
   
  <div
    class="loading-bubble third"
    style="background: currentColor; width: 20px; height: 20px;"
  />
</div>
`;

exports[`Icon props should render type 'mail' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="30"
  viewBox="0 0 24 24"
  width="30"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 3v18h24v-18h-24zm21.518 2l-9.518 7.713-9.518-7.713h19.036zm-19.518 14v-11.817l10 8.104 10-8.104v11.817h-20z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'mail' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="30"
  viewBox="0 0 24 24"
  width="30"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 3v18h24v-18h-24zm21.518 2l-9.518 7.713-9.518-7.713h19.036zm-19.518 14v-11.817l10 8.104 10-8.104v11.817h-20z"
    fill="#fff"
  />
</svg>
`;

exports[`Icon props should render type 'mail' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 3v18h24v-18h-24zm21.518 2l-9.518 7.713-9.518-7.713h19.036zm-19.518 14v-11.817l10 8.104 10-8.104v11.817h-20z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'next' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="15"
  version="1.1"
  viewBox="0 0 14 15"
  width="15"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <polygon
    fill="currentColor"
    fill-rule="evenodd"
    points="0 0.4245 0 14.9995 12.6225 7.712"
    stroke="none"
  />
   
  <polygon
    fill="currentColor"
    fill-rule="evenodd"
    points="10.435 15 13.87125 15 13.87125 0.425 10.435 0.425"
    stroke="none"
  />
</svg>
`;

exports[`Icon props should render type 'next' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="15"
  version="1.1"
  viewBox="0 0 14 15"
  width="15"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <polygon
    fill="#fff"
    fill-rule="evenodd"
    points="0 0.4245 0 14.9995 12.6225 7.712"
    stroke="none"
  />
   
  <polygon
    fill="#fff"
    fill-rule="evenodd"
    points="10.435 15 13.87125 15 13.87125 0.425 10.435 0.425"
    stroke="none"
  />
</svg>
`;

exports[`Icon props should render type 'next' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  version="1.1"
  viewBox="0 0 14 15"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <polygon
    fill="currentColor"
    fill-rule="evenodd"
    points="0 0.4245 0 14.9995 12.6225 7.712"
    stroke="none"
  />
   
  <polygon
    fill="currentColor"
    fill-rule="evenodd"
    points="10.435 15 13.87125 15 13.87125 0.425 10.435 0.425"
    stroke="none"
  />
</svg>
`;

exports[`Icon props should render type 'pause' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="23.400000000000002"
  version="1.1"
  viewBox="0 0 18 23"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-width="1"
  >
    <g
      fill="currentColor"
      transform="translate(-16.000000, -14.000000)"
    >
      <g
        transform="translate(16.000000, 14.000000)"
      >
        <polygon
          points="18 23 12 23 12 0 18 0"
        />
         
        <polygon
          points="6 23 0 23 0 0 6 0"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'pause' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="23.400000000000002"
  version="1.1"
  viewBox="0 0 18 23"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-width="1"
  >
    <g
      fill="#fff"
      transform="translate(-16.000000, -14.000000)"
    >
      <g
        transform="translate(16.000000, 14.000000)"
      >
        <polygon
          points="18 23 12 23 12 0 18 0"
        />
         
        <polygon
          points="6 23 0 23 0 0 6 0"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'pause' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="26"
  version="1.1"
  viewBox="0 0 18 23"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-width="1"
  >
    <g
      fill="currentColor"
      transform="translate(-16.000000, -14.000000)"
    >
      <g
        transform="translate(16.000000, 14.000000)"
      >
        <polygon
          points="18 23 12 23 12 0 18 0"
        />
         
        <polygon
          points="6 23 0 23 0 0 6 0"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'pinterest' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="30"
  role="img"
  viewBox="0 0 24 24"
  width="30"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12.017 0C5.396 0 .029 5.367.029 11.987c0 5.079 3.158 9.417 7.618 11.162-.105-.949-.199-2.403.041-3.439.219-.937 1.406-5.957 1.406-5.957s-.359-.72-.359-1.781c0-1.663.967-2.911 2.168-2.911 1.024 0 1.518.769 1.518 1.688 0 1.029-.653 2.567-.992 3.992-.285 1.193.6 2.165 1.775 2.165 2.128 0 3.768-2.245 3.768-5.487 0-2.861-2.063-4.869-5.008-4.869-3.41 0-5.409 2.562-5.409 5.199 0 1.033.394 2.143.889 2.741.099.12.112.225.085.345-.09.375-.293 1.199-.334 1.363-.053.225-.172.271-.401.165-1.495-.69-2.433-2.878-2.433-4.646 0-3.776 2.748-7.252 7.92-7.252 4.158 0 7.392 2.967 7.392 6.923 0 4.135-2.607 7.462-6.233 7.462-1.214 0-2.354-.629-2.758-1.379l-.749 2.848c-.269 1.045-1.004 2.352-1.498 3.146 1.123.345 2.306.535 3.55.535 6.607 0 11.985-5.365 11.985-11.987C23.97 5.39 18.592.026 11.985.026L12.017 0z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'pinterest' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="30"
  role="img"
  viewBox="0 0 24 24"
  width="30"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12.017 0C5.396 0 .029 5.367.029 11.987c0 5.079 3.158 9.417 7.618 11.162-.105-.949-.199-2.403.041-3.439.219-.937 1.406-5.957 1.406-5.957s-.359-.72-.359-1.781c0-1.663.967-2.911 2.168-2.911 1.024 0 1.518.769 1.518 1.688 0 1.029-.653 2.567-.992 3.992-.285 1.193.6 2.165 1.775 2.165 2.128 0 3.768-2.245 3.768-5.487 0-2.861-2.063-4.869-5.008-4.869-3.41 0-5.409 2.562-5.409 5.199 0 1.033.394 2.143.889 2.741.099.12.112.225.085.345-.09.375-.293 1.199-.334 1.363-.053.225-.172.271-.401.165-1.495-.69-2.433-2.878-2.433-4.646 0-3.776 2.748-7.252 7.92-7.252 4.158 0 7.392 2.967 7.392 6.923 0 4.135-2.607 7.462-6.233 7.462-1.214 0-2.354-.629-2.758-1.379l-.749 2.848c-.269 1.045-1.004 2.352-1.498 3.146 1.123.345 2.306.535 3.55.535 6.607 0 11.985-5.365 11.985-11.987C23.97 5.39 18.592.026 11.985.026L12.017 0z"
    fill="#fff"
  />
</svg>
`;

exports[`Icon props should render type 'pinterest' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  role="img"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12.017 0C5.396 0 .029 5.367.029 11.987c0 5.079 3.158 9.417 7.618 11.162-.105-.949-.199-2.403.041-3.439.219-.937 1.406-5.957 1.406-5.957s-.359-.72-.359-1.781c0-1.663.967-2.911 2.168-2.911 1.024 0 1.518.769 1.518 1.688 0 1.029-.653 2.567-.992 3.992-.285 1.193.6 2.165 1.775 2.165 2.128 0 3.768-2.245 3.768-5.487 0-2.861-2.063-4.869-5.008-4.869-3.41 0-5.409 2.562-5.409 5.199 0 1.033.394 2.143.889 2.741.099.12.112.225.085.345-.09.375-.293 1.199-.334 1.363-.053.225-.172.271-.401.165-1.495-.69-2.433-2.878-2.433-4.646 0-3.776 2.748-7.252 7.92-7.252 4.158 0 7.392 2.967 7.392 6.923 0 4.135-2.607 7.462-6.233 7.462-1.214 0-2.354-.629-2.758-1.379l-.749 2.848c-.269 1.045-1.004 2.352-1.498 3.146 1.123.345 2.306.535 3.55.535 6.607 0 11.985-5.365 11.985-11.987C23.97 5.39 18.592.026 11.985.026L12.017 0z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'play' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="23.982"
  version="1.1"
  viewBox="0 0 21 24"
  width="21"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-width="1"
  >
    <g
      fill="currentColor"
      transform="translate(-17.000000, -13.000000)"
    >
      <polygon
        points="17.2886 13.0896 37.4846 24.7496 17.2886 36.4096"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'play' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="23.982"
  version="1.1"
  viewBox="0 0 21 24"
  width="21"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-width="1"
  >
    <g
      fill="#fff"
      transform="translate(-17.000000, -13.000000)"
    >
      <polygon
        points="17.2886 13.0896 37.4846 24.7496 17.2886 36.4096"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'play' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="22.839999999999996"
  version="1.1"
  viewBox="0 0 21 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-width="1"
  >
    <g
      fill="currentColor"
      transform="translate(-17.000000, -13.000000)"
    >
      <polygon
        points="17.2886 13.0896 37.4846 24.7496 17.2886 36.4096"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'podlove-player' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  color="currentColor"
  enable-background="new 0 0 160.472 160.81"
  height="20"
  version="1.1"
  viewBox="0 0 160.472 160.81"
  width="20"
  x="0"
  xml:space="preserve"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  y="0"
>
  <g>
    <g>
      <g>
        <g>
          <path
            clip-rule="evenodd"
            d="M139.271,0h-56.92c-2.909,0-5.68,0.588-8.204,1.649h2.37
          c11.47,0,20.767,9.298,20.767,20.767v115.979c0,11.468-9.297,20.767-20.767,20.767h-2.369c2.523,1.061,5.294,1.648,8.203,1.648
          h56.92c11.71,0,21.201-9.492,21.201-21.201V21.202C160.472,9.493,150.98,0,139.271,0z"
            fill="#F2875C"
            fill-rule="evenodd"
          />
        </g>
      </g>
       
      <path
        d="M117.392,66.03l5.836,3.645l17.503,10.931
      l-3.502,2.135l-19.837,12.095V66.03 M116.054,61.839c-0.989,0-1.754,0.99-1.754,2.079c0,7.712,0,26.184,0,33.43
      c0,1.222,0.622,1.623,1.37,1.623c0.56,0,1.191-0.223,1.686-0.496c6.372-3.884,20.962-12.776,26.794-16.331
      c1.086-0.666,1.614-2.155,0.066-3.007c-5.863-3.663-20.882-13.04-27.125-16.94C116.732,61.948,116.381,61.839,116.054,61.839
      L116.054,61.839z"
        fill="#FFFFFF"
        stroke="#FFFFFF"
        stroke-miterlimit="10"
        stroke-width="2"
      />
    </g>
     
    <g>
      <g>
        <path
          d="M78.182,9c6.728,0,12.201,5.474,12.201,12.202v118.408c0,6.728-5.474,12.201-12.201,12.201H21.262
        c-6.727,0-12.2-5.473-12.2-12.201V21.202C9.062,14.474,14.535,9,21.262,9H78.182 M78.182,0H21.262
        c-11.707,0-21.2,9.493-21.2,21.202v118.408c0,11.708,9.493,21.201,21.2,21.201h56.919c11.71,0,21.201-9.492,21.201-21.201V21.202
        C99.383,9.493,89.892,0,78.182,0L78.182,0z"
          fill="#181716"
        />
      </g>
       
      <g>
        <path
          d="M49.639,90.412c12.742,0,23.069,10.327,23.069,23.068c0,12.74-10.327,23.069-23.069,23.069
        c-12.738,0-23.067-10.329-23.067-23.069C26.571,100.739,36.9,90.412,49.639,90.412 M49.639,81.412
        c-17.682,0-32.067,14.386-32.067,32.068c0,17.683,14.385,32.069,32.067,32.069c17.683,0,32.069-14.386,32.069-32.069
        C81.708,95.798,67.322,81.412,49.639,81.412L49.639,81.412z"
          fill="#181716"
        />
      </g>
       
      <path
        clip-rule="evenodd"
        d="
      M72.957,46.223L49.388,69.806L25.82,46.22c-2.649-2.7-4.285-6.399-4.285-10.481c0-8.267,6.702-14.968,14.968-14.968
      c5.485,0,10.278,2.949,12.885,7.347c2.606-4.398,7.401-7.347,12.884-7.347c8.268,0,14.97,6.701,14.97,14.968
      C77.242,39.821,75.606,43.522,72.957,46.223z"
        fill="none"
        fill-rule="evenodd"
        stroke="#181716"
        stroke-miterlimit="10"
        stroke-width="9"
      />
       
      <path
        clip-rule="evenodd"
        d="M49.64,105.223c4.561,0,8.26,3.698,8.26,8.257
      c0,4.562-3.699,8.258-8.26,8.258c-4.56,0-8.257-3.696-8.257-8.258C41.383,108.921,45.08,105.223,49.64,105.223z"
        fill="#181716"
        fill-rule="evenodd"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'podlove-player' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  color="#fff"
  enable-background="new 0 0 160.472 160.81"
  height="20"
  version="1.1"
  viewBox="0 0 160.472 160.81"
  width="20"
  x="0"
  xml:space="preserve"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  y="0"
>
  <g>
    <g>
      <g>
        <g>
          <path
            clip-rule="evenodd"
            d="M139.271,0h-56.92c-2.909,0-5.68,0.588-8.204,1.649h2.37
          c11.47,0,20.767,9.298,20.767,20.767v115.979c0,11.468-9.297,20.767-20.767,20.767h-2.369c2.523,1.061,5.294,1.648,8.203,1.648
          h56.92c11.71,0,21.201-9.492,21.201-21.201V21.202C160.472,9.493,150.98,0,139.271,0z"
            fill="#F2875C"
            fill-rule="evenodd"
          />
        </g>
      </g>
       
      <path
        d="M117.392,66.03l5.836,3.645l17.503,10.931
      l-3.502,2.135l-19.837,12.095V66.03 M116.054,61.839c-0.989,0-1.754,0.99-1.754,2.079c0,7.712,0,26.184,0,33.43
      c0,1.222,0.622,1.623,1.37,1.623c0.56,0,1.191-0.223,1.686-0.496c6.372-3.884,20.962-12.776,26.794-16.331
      c1.086-0.666,1.614-2.155,0.066-3.007c-5.863-3.663-20.882-13.04-27.125-16.94C116.732,61.948,116.381,61.839,116.054,61.839
      L116.054,61.839z"
        fill="#FFFFFF"
        stroke="#FFFFFF"
        stroke-miterlimit="10"
        stroke-width="2"
      />
    </g>
     
    <g>
      <g>
        <path
          d="M78.182,9c6.728,0,12.201,5.474,12.201,12.202v118.408c0,6.728-5.474,12.201-12.201,12.201H21.262
        c-6.727,0-12.2-5.473-12.2-12.201V21.202C9.062,14.474,14.535,9,21.262,9H78.182 M78.182,0H21.262
        c-11.707,0-21.2,9.493-21.2,21.202v118.408c0,11.708,9.493,21.201,21.2,21.201h56.919c11.71,0,21.201-9.492,21.201-21.201V21.202
        C99.383,9.493,89.892,0,78.182,0L78.182,0z"
          fill="#181716"
        />
      </g>
       
      <g>
        <path
          d="M49.639,90.412c12.742,0,23.069,10.327,23.069,23.068c0,12.74-10.327,23.069-23.069,23.069
        c-12.738,0-23.067-10.329-23.067-23.069C26.571,100.739,36.9,90.412,49.639,90.412 M49.639,81.412
        c-17.682,0-32.067,14.386-32.067,32.068c0,17.683,14.385,32.069,32.067,32.069c17.683,0,32.069-14.386,32.069-32.069
        C81.708,95.798,67.322,81.412,49.639,81.412L49.639,81.412z"
          fill="#181716"
        />
      </g>
       
      <path
        clip-rule="evenodd"
        d="
      M72.957,46.223L49.388,69.806L25.82,46.22c-2.649-2.7-4.285-6.399-4.285-10.481c0-8.267,6.702-14.968,14.968-14.968
      c5.485,0,10.278,2.949,12.885,7.347c2.606-4.398,7.401-7.347,12.884-7.347c8.268,0,14.97,6.701,14.97,14.968
      C77.242,39.821,75.606,43.522,72.957,46.223z"
        fill="none"
        fill-rule="evenodd"
        stroke="#181716"
        stroke-miterlimit="10"
        stroke-width="9"
      />
       
      <path
        clip-rule="evenodd"
        d="M49.64,105.223c4.561,0,8.26,3.698,8.26,8.257
      c0,4.562-3.699,8.258-8.26,8.258c-4.56,0-8.257-3.696-8.257-8.258C41.383,108.921,45.08,105.223,49.64,105.223z"
        fill="#181716"
        fill-rule="evenodd"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'podlove-player' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  color="currentColor"
  enable-background="new 0 0 160.472 160.81"
  height="20"
  version="1.1"
  viewBox="0 0 160.472 160.81"
  width="20"
  x="0"
  xml:space="preserve"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  y="0"
>
  <g>
    <g>
      <g>
        <g>
          <path
            clip-rule="evenodd"
            d="M139.271,0h-56.92c-2.909,0-5.68,0.588-8.204,1.649h2.37
          c11.47,0,20.767,9.298,20.767,20.767v115.979c0,11.468-9.297,20.767-20.767,20.767h-2.369c2.523,1.061,5.294,1.648,8.203,1.648
          h56.92c11.71,0,21.201-9.492,21.201-21.201V21.202C160.472,9.493,150.98,0,139.271,0z"
            fill="#F2875C"
            fill-rule="evenodd"
          />
        </g>
      </g>
       
      <path
        d="M117.392,66.03l5.836,3.645l17.503,10.931
      l-3.502,2.135l-19.837,12.095V66.03 M116.054,61.839c-0.989,0-1.754,0.99-1.754,2.079c0,7.712,0,26.184,0,33.43
      c0,1.222,0.622,1.623,1.37,1.623c0.56,0,1.191-0.223,1.686-0.496c6.372-3.884,20.962-12.776,26.794-16.331
      c1.086-0.666,1.614-2.155,0.066-3.007c-5.863-3.663-20.882-13.04-27.125-16.94C116.732,61.948,116.381,61.839,116.054,61.839
      L116.054,61.839z"
        fill="#FFFFFF"
        stroke="#FFFFFF"
        stroke-miterlimit="10"
        stroke-width="2"
      />
    </g>
     
    <g>
      <g>
        <path
          d="M78.182,9c6.728,0,12.201,5.474,12.201,12.202v118.408c0,6.728-5.474,12.201-12.201,12.201H21.262
        c-6.727,0-12.2-5.473-12.2-12.201V21.202C9.062,14.474,14.535,9,21.262,9H78.182 M78.182,0H21.262
        c-11.707,0-21.2,9.493-21.2,21.202v118.408c0,11.708,9.493,21.201,21.2,21.201h56.919c11.71,0,21.201-9.492,21.201-21.201V21.202
        C99.383,9.493,89.892,0,78.182,0L78.182,0z"
          fill="#181716"
        />
      </g>
       
      <g>
        <path
          d="M49.639,90.412c12.742,0,23.069,10.327,23.069,23.068c0,12.74-10.327,23.069-23.069,23.069
        c-12.738,0-23.067-10.329-23.067-23.069C26.571,100.739,36.9,90.412,49.639,90.412 M49.639,81.412
        c-17.682,0-32.067,14.386-32.067,32.068c0,17.683,14.385,32.069,32.067,32.069c17.683,0,32.069-14.386,32.069-32.069
        C81.708,95.798,67.322,81.412,49.639,81.412L49.639,81.412z"
          fill="#181716"
        />
      </g>
       
      <path
        clip-rule="evenodd"
        d="
      M72.957,46.223L49.388,69.806L25.82,46.22c-2.649-2.7-4.285-6.399-4.285-10.481c0-8.267,6.702-14.968,14.968-14.968
      c5.485,0,10.278,2.949,12.885,7.347c2.606-4.398,7.401-7.347,12.884-7.347c8.268,0,14.97,6.701,14.97,14.968
      C77.242,39.821,75.606,43.522,72.957,46.223z"
        fill="none"
        fill-rule="evenodd"
        stroke="#181716"
        stroke-miterlimit="10"
        stroke-width="9"
      />
       
      <path
        clip-rule="evenodd"
        d="M49.64,105.223c4.561,0,8.26,3.698,8.26,8.257
      c0,4.562-3.699,8.258-8.26,8.258c-4.56,0-8.257-3.696-8.257-8.258C41.383,108.921,45.08,105.223,49.64,105.223z"
        fill="#181716"
        fill-rule="evenodd"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'previous' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="15"
  version="1.1"
  viewBox="0 0 14 15"
  width="15"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <polygon
    fill="currentColor"
    fill-rule="evenodd"
    points="13.872375 0.4245 1.249875 7.712 13.872375 14.9995"
    stroke="none"
  />
   
  <polygon
    fill="currentColor"
    fill-rule="evenodd"
    points="0 15 3.4375 15 3.4375 0.425 0 0.425"
    stroke="none"
  />
</svg>
`;

exports[`Icon props should render type 'previous' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="15"
  version="1.1"
  viewBox="0 0 14 15"
  width="15"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <polygon
    fill="#fff"
    fill-rule="evenodd"
    points="13.872375 0.4245 1.249875 7.712 13.872375 14.9995"
    stroke="none"
  />
   
  <polygon
    fill="#fff"
    fill-rule="evenodd"
    points="0 15 3.4375 15 3.4375 0.425 0 0.425"
    stroke="none"
  />
</svg>
`;

exports[`Icon props should render type 'previous' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  version="1.1"
  viewBox="0 0 14 15"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <polygon
    fill="currentColor"
    fill-rule="evenodd"
    points="13.872375 0.4245 1.249875 7.712 13.872375 14.9995"
    stroke="none"
  />
   
  <polygon
    fill="currentColor"
    fill-rule="evenodd"
    points="0 15 3.4375 15 3.4375 0.425 0 0.425"
    stroke="none"
  />
</svg>
`;

exports[`Icon props should render type 'reddit' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="30"
  viewBox="0 0 24 24"
  width="30"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M2.204 14.049c-.06.276-.091.56-.091.847 0 3.443 4.402 6.249 9.814 6.249 5.41 0 9.812-2.804 9.812-6.249 0-.274-.029-.546-.082-.809l-.015-.032c-.021-.055-.029-.11-.029-.165-.302-1.175-1.117-2.241-2.296-3.103-.045-.016-.088-.039-.126-.07-.026-.02-.045-.042-.067-.064-1.792-1.234-4.356-2.008-7.196-2.008-2.815 0-5.354.759-7.146 1.971-.014.018-.029.033-.049.049-.039.033-.084.06-.13.075-1.206.862-2.042 1.937-2.354 3.123 0 .058-.014.114-.037.171l-.008.015zm9.773 5.441c-1.794 0-3.057-.389-3.863-1.197-.173-.174-.173-.457 0-.632.176-.165.46-.165.635 0 .63.629 1.685.943 3.228.943 1.542 0 2.591-.3 3.219-.929.165-.164.45-.164.629 0 .165.18.165.465 0 .645-.809.808-2.065 1.198-3.862 1.198l.014-.028zm-3.606-7.573c-.914 0-1.677.765-1.677 1.677 0 .91.763 1.65 1.677 1.65s1.651-.74 1.651-1.65c0-.912-.739-1.677-1.651-1.677zm7.233 0c-.914 0-1.678.765-1.678 1.677 0 .91.764 1.65 1.678 1.65s1.651-.74 1.651-1.65c0-.912-.739-1.677-1.651-1.677zm4.548-1.595c1.037.833 1.8 1.821 2.189 2.904.45-.336.719-.864.719-1.449 0-1.002-.815-1.816-1.818-1.816-.399 0-.778.129-1.09.363v-.002zM2.711 9.963c-1.003 0-1.817.816-1.817 1.818 0 .543.239 1.048.644 1.389.401-1.079 1.172-2.053 2.213-2.876-.302-.21-.663-.329-1.039-.329v-.002zm9.217 12.079c-5.906 0-10.709-3.205-10.709-7.142 0-.275.023-.544.068-.809C.494 13.598 0 12.729 0 11.777c0-1.496 1.227-2.713 2.725-2.713.674 0 1.303.246 1.797.682 1.856-1.191 4.357-1.941 7.112-1.992l1.812-5.524.404.095s.016 0 .016.002l4.223.993c.344-.798 1.138-1.36 2.065-1.36 1.229 0 2.231 1.004 2.231 2.234 0 1.232-1.003 2.234-2.231 2.234s-2.23-1.004-2.23-2.23l-3.851-.912-1.467 4.477c2.65.105 5.047.854 6.844 2.021.494-.464 1.144-.719 1.833-.719 1.498 0 2.718 1.213 2.718 2.711 0 .987-.54 1.886-1.378 2.365.029.255.059.494.059.749-.015 3.938-4.806 7.143-10.72 7.143l-.034.009zm8.179-19.187c-.74 0-1.34.599-1.34 1.338 0 .738.6 1.34 1.34 1.34.732 0 1.33-.6 1.33-1.334 0-.733-.598-1.332-1.347-1.332l.017-.012z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'reddit' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="30"
  viewBox="0 0 24 24"
  width="30"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M2.204 14.049c-.06.276-.091.56-.091.847 0 3.443 4.402 6.249 9.814 6.249 5.41 0 9.812-2.804 9.812-6.249 0-.274-.029-.546-.082-.809l-.015-.032c-.021-.055-.029-.11-.029-.165-.302-1.175-1.117-2.241-2.296-3.103-.045-.016-.088-.039-.126-.07-.026-.02-.045-.042-.067-.064-1.792-1.234-4.356-2.008-7.196-2.008-2.815 0-5.354.759-7.146 1.971-.014.018-.029.033-.049.049-.039.033-.084.06-.13.075-1.206.862-2.042 1.937-2.354 3.123 0 .058-.014.114-.037.171l-.008.015zm9.773 5.441c-1.794 0-3.057-.389-3.863-1.197-.173-.174-.173-.457 0-.632.176-.165.46-.165.635 0 .63.629 1.685.943 3.228.943 1.542 0 2.591-.3 3.219-.929.165-.164.45-.164.629 0 .165.18.165.465 0 .645-.809.808-2.065 1.198-3.862 1.198l.014-.028zm-3.606-7.573c-.914 0-1.677.765-1.677 1.677 0 .91.763 1.65 1.677 1.65s1.651-.74 1.651-1.65c0-.912-.739-1.677-1.651-1.677zm7.233 0c-.914 0-1.678.765-1.678 1.677 0 .91.764 1.65 1.678 1.65s1.651-.74 1.651-1.65c0-.912-.739-1.677-1.651-1.677zm4.548-1.595c1.037.833 1.8 1.821 2.189 2.904.45-.336.719-.864.719-1.449 0-1.002-.815-1.816-1.818-1.816-.399 0-.778.129-1.09.363v-.002zM2.711 9.963c-1.003 0-1.817.816-1.817 1.818 0 .543.239 1.048.644 1.389.401-1.079 1.172-2.053 2.213-2.876-.302-.21-.663-.329-1.039-.329v-.002zm9.217 12.079c-5.906 0-10.709-3.205-10.709-7.142 0-.275.023-.544.068-.809C.494 13.598 0 12.729 0 11.777c0-1.496 1.227-2.713 2.725-2.713.674 0 1.303.246 1.797.682 1.856-1.191 4.357-1.941 7.112-1.992l1.812-5.524.404.095s.016 0 .016.002l4.223.993c.344-.798 1.138-1.36 2.065-1.36 1.229 0 2.231 1.004 2.231 2.234 0 1.232-1.003 2.234-2.231 2.234s-2.23-1.004-2.23-2.23l-3.851-.912-1.467 4.477c2.65.105 5.047.854 6.844 2.021.494-.464 1.144-.719 1.833-.719 1.498 0 2.718 1.213 2.718 2.711 0 .987-.54 1.886-1.378 2.365.029.255.059.494.059.749-.015 3.938-4.806 7.143-10.72 7.143l-.034.009zm8.179-19.187c-.74 0-1.34.599-1.34 1.338 0 .738.6 1.34 1.34 1.34.732 0 1.33-.6 1.33-1.334 0-.733-.598-1.332-1.347-1.332l.017-.012z"
    fill="#fff"
  />
</svg>
`;

exports[`Icon props should render type 'reddit' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M2.204 14.049c-.06.276-.091.56-.091.847 0 3.443 4.402 6.249 9.814 6.249 5.41 0 9.812-2.804 9.812-6.249 0-.274-.029-.546-.082-.809l-.015-.032c-.021-.055-.029-.11-.029-.165-.302-1.175-1.117-2.241-2.296-3.103-.045-.016-.088-.039-.126-.07-.026-.02-.045-.042-.067-.064-1.792-1.234-4.356-2.008-7.196-2.008-2.815 0-5.354.759-7.146 1.971-.014.018-.029.033-.049.049-.039.033-.084.06-.13.075-1.206.862-2.042 1.937-2.354 3.123 0 .058-.014.114-.037.171l-.008.015zm9.773 5.441c-1.794 0-3.057-.389-3.863-1.197-.173-.174-.173-.457 0-.632.176-.165.46-.165.635 0 .63.629 1.685.943 3.228.943 1.542 0 2.591-.3 3.219-.929.165-.164.45-.164.629 0 .165.18.165.465 0 .645-.809.808-2.065 1.198-3.862 1.198l.014-.028zm-3.606-7.573c-.914 0-1.677.765-1.677 1.677 0 .91.763 1.65 1.677 1.65s1.651-.74 1.651-1.65c0-.912-.739-1.677-1.651-1.677zm7.233 0c-.914 0-1.678.765-1.678 1.677 0 .91.764 1.65 1.678 1.65s1.651-.74 1.651-1.65c0-.912-.739-1.677-1.651-1.677zm4.548-1.595c1.037.833 1.8 1.821 2.189 2.904.45-.336.719-.864.719-1.449 0-1.002-.815-1.816-1.818-1.816-.399 0-.778.129-1.09.363v-.002zM2.711 9.963c-1.003 0-1.817.816-1.817 1.818 0 .543.239 1.048.644 1.389.401-1.079 1.172-2.053 2.213-2.876-.302-.21-.663-.329-1.039-.329v-.002zm9.217 12.079c-5.906 0-10.709-3.205-10.709-7.142 0-.275.023-.544.068-.809C.494 13.598 0 12.729 0 11.777c0-1.496 1.227-2.713 2.725-2.713.674 0 1.303.246 1.797.682 1.856-1.191 4.357-1.941 7.112-1.992l1.812-5.524.404.095s.016 0 .016.002l4.223.993c.344-.798 1.138-1.36 2.065-1.36 1.229 0 2.231 1.004 2.231 2.234 0 1.232-1.003 2.234-2.231 2.234s-2.23-1.004-2.23-2.23l-3.851-.912-1.467 4.477c2.65.105 5.047.854 6.844 2.021.494-.464 1.144-.719 1.833-.719 1.498 0 2.718 1.213 2.718 2.711 0 .987-.54 1.886-1.378 2.365.029.255.059.494.059.749-.015 3.938-4.806 7.143-10.72 7.143l-.034.009zm8.179-19.187c-.74 0-1.34.599-1.34 1.338 0 .738.6 1.34 1.34 1.34.732 0 1.33-.6 1.33-1.334 0-.733-.598-1.332-1.347-1.332l.017-.012z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'restart' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M23 12c0 1.042-.154 2.045-.425 3h-2.101c.335-.94.526-1.947.526-3 0-4.962-4.037-9-9-9-1.706 0-3.296.484-4.655 1.314l1.858 2.686h-6.994l2.152-7 1.849 2.673c1.684-1.049 3.659-1.673 5.79-1.673 6.074 0 11 4.925 11 11zm-6.354 7.692c-1.357.826-2.944 1.308-4.646 1.308-4.962 0-9-4.038-9-9 0-1.053.191-2.06.525-3h-2.1c-.271.955-.425 1.958-.425 3 0 6.075 4.925 11 11 11 2.127 0 4.099-.621 5.78-1.667l1.853 2.667 2.152-6.989h-6.994l1.855 2.681z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'restart' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M23 12c0 1.042-.154 2.045-.425 3h-2.101c.335-.94.526-1.947.526-3 0-4.962-4.037-9-9-9-1.706 0-3.296.484-4.655 1.314l1.858 2.686h-6.994l2.152-7 1.849 2.673c1.684-1.049 3.659-1.673 5.79-1.673 6.074 0 11 4.925 11 11zm-6.354 7.692c-1.357.826-2.944 1.308-4.646 1.308-4.962 0-9-4.038-9-9 0-1.053.191-2.06.525-3h-2.1c-.271.955-.425 1.958-.425 3 0 6.075 4.925 11 11 11 2.127 0 4.099-.621 5.78-1.667l1.853 2.667 2.152-6.989h-6.994l1.855 2.681z"
    fill="#fff"
  />
</svg>
`;

exports[`Icon props should render type 'restart' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M23 12c0 1.042-.154 2.045-.425 3h-2.101c.335-.94.526-1.947.526-3 0-4.962-4.037-9-9-9-1.706 0-3.296.484-4.655 1.314l1.858 2.686h-6.994l2.152-7 1.849 2.673c1.684-1.049 3.659-1.673 5.79-1.673 6.074 0 11 4.925 11 11zm-6.354 7.692c-1.357.826-2.944 1.308-4.646 1.308-4.962 0-9-4.038-9-9 0-1.053.191-2.06.525-3h-2.1c-.271.955-.425 1.958-.425 3 0 6.075 4.925 11 11 11 2.127 0 4.099-.621 5.78-1.667l1.853 2.667 2.152-6.989h-6.994l1.855 2.681z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon props should render type 'search-clear' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="21"
  version="1.1"
  viewBox="0 0 21 21"
  width="21"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-width="1"
  >
    <g
      transform="translate(-207.000000, -398.000000)"
    >
      <g
        transform="translate(0.000000, 341.000000)"
      >
        <rect
          fill="currentColor"
          height="21"
          rx="10.5"
          width="21"
          x="207"
          y="57"
        />
         
        <rect
          fill="currentColor"
          height="1.5"
          transform="translate(217.500000, 67.772971) rotate(45.000000) translate(-217.500000, -67.772971) "
          width="9"
          x="213"
          y="67.0229708"
        />
         
        <polygon
          fill="currentColor"
          points="213 67.0229708 222 67.0229708 222 68.5229708 217.610435 68.5229708 213 68.5229708"
          transform="translate(217.500000, 67.772971) rotate(135.000000) translate(-217.500000, -67.772971) "
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'search-clear' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="21"
  version="1.1"
  viewBox="0 0 21 21"
  width="21"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-width="1"
  >
    <g
      transform="translate(-207.000000, -398.000000)"
    >
      <g
        transform="translate(0.000000, 341.000000)"
      >
        <rect
          fill="#fff"
          height="21"
          rx="10.5"
          width="21"
          x="207"
          y="57"
        />
         
        <rect
          fill="currentColor"
          height="1.5"
          transform="translate(217.500000, 67.772971) rotate(45.000000) translate(-217.500000, -67.772971) "
          width="9"
          x="213"
          y="67.0229708"
        />
         
        <polygon
          fill="currentColor"
          points="213 67.0229708 222 67.0229708 222 68.5229708 217.610435 68.5229708 213 68.5229708"
          transform="translate(217.500000, 67.772971) rotate(135.000000) translate(-217.500000, -67.772971) "
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'search-clear' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  version="1.1"
  viewBox="0 0 21 21"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-width="1"
  >
    <g
      transform="translate(-207.000000, -398.000000)"
    >
      <g
        transform="translate(0.000000, 341.000000)"
      >
        <rect
          fill="currentColor"
          height="21"
          rx="10.5"
          width="21"
          x="207"
          y="57"
        />
         
        <rect
          fill="currentColor"
          height="1.5"
          transform="translate(217.500000, 67.772971) rotate(45.000000) translate(-217.500000, -67.772971) "
          width="9"
          x="213"
          y="67.0229708"
        />
         
        <polygon
          fill="currentColor"
          points="213 67.0229708 222 67.0229708 222 68.5229708 217.610435 68.5229708 213 68.5229708"
          transform="translate(217.500000, 67.772971) rotate(135.000000) translate(-217.500000, -67.772971) "
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'search-next' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="25"
  version="1.1"
  viewBox="0 0 25 25"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-width="1"
  >
    <g
      transform="translate(-280.000000, -436.000000)"
    >
      <g
        transform="translate(0.000000, 341.000000)"
      >
        <rect
          fill="currentColor"
          height="25"
          rx="12.5"
          width="25"
          x="280"
          y="95"
        />
         
        <g
          fill="currentColor"
          transform="translate(290.000000, 104.000000)"
        >
          <polygon
            points="0 0 7 4.04139434 0 8.08278867"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'search-next' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="25"
  version="1.1"
  viewBox="0 0 25 25"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-width="1"
  >
    <g
      transform="translate(-280.000000, -436.000000)"
    >
      <g
        transform="translate(0.000000, 341.000000)"
      >
        <rect
          fill="#fff"
          height="25"
          rx="12.5"
          width="25"
          x="280"
          y="95"
        />
         
        <g
          fill="currentColor"
          transform="translate(290.000000, 104.000000)"
        >
          <polygon
            points="0 0 7 4.04139434 0 8.08278867"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'search-next' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  version="1.1"
  viewBox="0 0 25 25"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-width="1"
  >
    <g
      transform="translate(-280.000000, -436.000000)"
    >
      <g
        transform="translate(0.000000, 341.000000)"
      >
        <rect
          fill="currentColor"
          height="25"
          rx="12.5"
          width="25"
          x="280"
          y="95"
        />
         
        <g
          fill="currentColor"
          transform="translate(290.000000, 104.000000)"
        >
          <polygon
            points="0 0 7 4.04139434 0 8.08278867"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'search-previous' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="25"
  version="1.1"
  viewBox="0 0 25 25"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-width="1"
  >
    <g
      transform="translate(-15.000000, -436.000000)"
    >
      <g
        transform="translate(0.000000, 341.000000)"
      >
        <rect
          fill="currentColor"
          height="25"
          rx="12.5"
          width="25"
          x="15"
          y="95"
        />
         
        <g
          fill="currentColor"
          transform="translate(26.500000, 107.500000) rotate(180.000000) translate(-26.500000, -107.500000) translate(23.000000, 103.000000)"
        >
          <polygon
            points="0 0 7 4.04139434 0 8.08278867"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'search-previous' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="25"
  version="1.1"
  viewBox="0 0 25 25"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-width="1"
  >
    <g
      transform="translate(-15.000000, -436.000000)"
    >
      <g
        transform="translate(0.000000, 341.000000)"
      >
        <rect
          fill="#fff"
          height="25"
          rx="12.5"
          width="25"
          x="15"
          y="95"
        />
         
        <g
          fill="currentColor"
          transform="translate(26.500000, 107.500000) rotate(180.000000) translate(-26.500000, -107.500000) translate(23.000000, 103.000000)"
        >
          <polygon
            points="0 0 7 4.04139434 0 8.08278867"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'search-previous' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="20"
  version="1.1"
  viewBox="0 0 25 25"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-width="1"
  >
    <g
      transform="translate(-15.000000, -436.000000)"
    >
      <g
        transform="translate(0.000000, 341.000000)"
      >
        <rect
          fill="currentColor"
          height="25"
          rx="12.5"
          width="25"
          x="15"
          y="95"
        />
         
        <g
          fill="currentColor"
          transform="translate(26.500000, 107.500000) rotate(180.000000) translate(-26.500000, -107.500000) translate(23.000000, 103.000000)"
        >
          <polygon
            points="0 0 7 4.04139434 0 8.08278867"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'share' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="25"
  stroke-miterlimit="1.5"
  viewBox="0 0 50 50"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M23.98 5.52l-3.537 3.576L19 7.638s4.221-4.395 5.221-5.335C24.425 2.112 24.75 2 25 2s.531.123.721.302c1 .94 5.279 5.336 5.279 5.336l-1.443 1.458L26.02 5.52 26 22h-2.04l.02-16.48"
    fill="currentColor"
    fill-rule="nonzero"
  />
   
  <path
    d="M18 13h-5v24h24V13h-5"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon props should render type 'share' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="25"
  stroke-miterlimit="1.5"
  viewBox="0 0 50 50"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M23.98 5.52l-3.537 3.576L19 7.638s4.221-4.395 5.221-5.335C24.425 2.112 24.75 2 25 2s.531.123.721.302c1 .94 5.279 5.336 5.279 5.336l-1.443 1.458L26.02 5.52 26 22h-2.04l.02-16.48"
    fill="#fff"
    fill-rule="nonzero"
  />
   
  <path
    d="M18 13h-5v24h24V13h-5"
    fill="none"
    stroke="#fff"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon props should render type 'share' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="20"
  stroke-miterlimit="1.5"
  viewBox="0 0 50 50"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M23.98 5.52l-3.537 3.576L19 7.638s4.221-4.395 5.221-5.335C24.425 2.112 24.75 2 25 2s.531.123.721.302c1 .94 5.279 5.336 5.279 5.336l-1.443 1.458L26.02 5.52 26 22h-2.04l.02-16.48"
    fill="currentColor"
    fill-rule="nonzero"
  />
   
  <path
    d="M18 13h-5v24h24V13h-5"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon props should render type 'speaker-0' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="17.692307692307693"
  viewBox="0 0 24.8 21"
  width="23"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  >
    <g
      stroke="currentColor"
    >
      <polyline
        points="9,17 12.5,20.5 12.5,12"
      />
       
      <path
        d="M12.5,6V0.5l-7,7H2C1.2,7.5,0.5,8.2,0.5,9v3c0,0.8,0.7,1.5,1.5,1.5h2.5"
      />
       
      <path
        d="M15.5,10.5c0,1.4-1.1,2.5-2.5,2.5h-0.5"
      />
       
      <path
        d="M1.5,20.5l20-20"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'speaker-0' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="17.692307692307693"
  viewBox="0 0 24.8 21"
  width="23"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  >
    <g
      stroke="#fff"
    >
      <polyline
        points="9,17 12.5,20.5 12.5,12"
      />
       
      <path
        d="M12.5,6V0.5l-7,7H2C1.2,7.5,0.5,8.2,0.5,9v3c0,0.8,0.7,1.5,1.5,1.5h2.5"
      />
       
      <path
        d="M15.5,10.5c0,1.4-1.1,2.5-2.5,2.5h-0.5"
      />
       
      <path
        d="M1.5,20.5l20-20"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'speaker-0' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="15.384615384615383"
  viewBox="0 0 24.8 21"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  >
    <g
      stroke="currentColor"
    >
      <polyline
        points="9,17 12.5,20.5 12.5,12"
      />
       
      <path
        d="M12.5,6V0.5l-7,7H2C1.2,7.5,0.5,8.2,0.5,9v3c0,0.8,0.7,1.5,1.5,1.5h2.5"
      />
       
      <path
        d="M15.5,10.5c0,1.4-1.1,2.5-2.5,2.5h-0.5"
      />
       
      <path
        d="M1.5,20.5l20-20"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'speaker-25' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="17.692307692307693"
  viewBox="0 0 24.8 21"
  width="23"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  >
    <g
      stroke="currentColor"
    >
      <path
        d="M5.5,7.5H2C1.2,7.5,0.5,8.2,0.5,9v3c0,0.8,0.7,1.5,1.5,1.5h3.5l7,7v-20L5.5,7.5L5.5,7.5z"
      />
       
      <path
        d="M15.5,7c1.1,0.8,2,2,2,3.5s-0.9,2.7-2,3.5"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'speaker-25' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="17.692307692307693"
  viewBox="0 0 24.8 21"
  width="23"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  >
    <g
      stroke="#fff"
    >
      <path
        d="M5.5,7.5H2C1.2,7.5,0.5,8.2,0.5,9v3c0,0.8,0.7,1.5,1.5,1.5h3.5l7,7v-20L5.5,7.5L5.5,7.5z"
      />
       
      <path
        d="M15.5,7c1.1,0.8,2,2,2,3.5s-0.9,2.7-2,3.5"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'speaker-25' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="15.384615384615383"
  viewBox="0 0 24.8 21"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  >
    <g
      stroke="currentColor"
    >
      <path
        d="M5.5,7.5H2C1.2,7.5,0.5,8.2,0.5,9v3c0,0.8,0.7,1.5,1.5,1.5h3.5l7,7v-20L5.5,7.5L5.5,7.5z"
      />
       
      <path
        d="M15.5,7c1.1,0.8,2,2,2,3.5s-0.9,2.7-2,3.5"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'speaker-50' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="17.692307692307693"
  viewBox="0 0 24.8 21"
  width="23"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  >
    <g
      stroke="currentColor"
    >
      <path
        d="M5.5,7.5H2C1.2,7.5,0.5,8.2,0.5,9v3c0,0.8,0.7,1.5,1.5,1.5h3.5l7,7v-20L5.5,7.5L5.5,7.5z"
      />
       
      <path
        d="M17.5,4.5c1.7,1.4,3,3.7,3,6c0,2.3-1.3,4.6-3,6"
      />
       
      <path
        d="M15.5,7c1.1,0.8,2,2,2,3.5s-0.9,2.7-2,3.5"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'speaker-50' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="17.692307692307693"
  viewBox="0 0 24.8 21"
  width="23"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  >
    <g
      stroke="#fff"
    >
      <path
        d="M5.5,7.5H2C1.2,7.5,0.5,8.2,0.5,9v3c0,0.8,0.7,1.5,1.5,1.5h3.5l7,7v-20L5.5,7.5L5.5,7.5z"
      />
       
      <path
        d="M17.5,4.5c1.7,1.4,3,3.7,3,6c0,2.3-1.3,4.6-3,6"
      />
       
      <path
        d="M15.5,7c1.1,0.8,2,2,2,3.5s-0.9,2.7-2,3.5"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'speaker-50' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="15.384615384615383"
  viewBox="0 0 24.8 21"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  >
    <g
      stroke="currentColor"
    >
      <path
        d="M5.5,7.5H2C1.2,7.5,0.5,8.2,0.5,9v3c0,0.8,0.7,1.5,1.5,1.5h3.5l7,7v-20L5.5,7.5L5.5,7.5z"
      />
       
      <path
        d="M17.5,4.5c1.7,1.4,3,3.7,3,6c0,2.3-1.3,4.6-3,6"
      />
       
      <path
        d="M15.5,7c1.1,0.8,2,2,2,3.5s-0.9,2.7-2,3.5"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'speaker-75' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  height="17.692307692307693"
  viewBox="0 0 24.8 21"
  width="23"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  >
    <g
      stroke="currentColor"
    >
      <path
        d="M5.5,7.5H2C1.2,7.5,0.5,8.2,0.5,9v3c0,0.8,0.7,1.5,1.5,1.5h3.5l7,7v-20L5.5,7.5L5.5,7.5z"
      />
       
      <path
        d="M20,2.5c2.2,1.9,3.5,4.8,3.5,8s-1.3,6.1-3.5,8"
      />
       
      <path
        d="M17.5,4.5c1.7,1.4,3,3.7,3,6c0,2.3-1.3,4.6-3,6"
      />
       
      <path
        d="M15.5,7c1.1,0.8,2,2,2,3.5s-0.9,2.7-2,3.5"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'speaker-75' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="17.692307692307693"
  viewBox="0 0 24.8 21"
  width="23"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  >
    <g
      stroke="#fff"
    >
      <path
        d="M5.5,7.5H2C1.2,7.5,0.5,8.2,0.5,9v3c0,0.8,0.7,1.5,1.5,1.5h3.5l7,7v-20L5.5,7.5L5.5,7.5z"
      />
       
      <path
        d="M20,2.5c2.2,1.9,3.5,4.8,3.5,8s-1.3,6.1-3.5,8"
      />
       
      <path
        d="M17.5,4.5c1.7,1.4,3,3.7,3,6c0,2.3-1.3,4.6-3,6"
      />
       
      <path
        d="M15.5,7c1.1,0.8,2,2,2,3.5s-0.9,2.7-2,3.5"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'speaker-75' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  height="15.384615384615383"
  viewBox="0 0 24.8 21"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke="none"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  >
    <g
      stroke="currentColor"
    >
      <path
        d="M5.5,7.5H2C1.2,7.5,0.5,8.2,0.5,9v3c0,0.8,0.7,1.5,1.5,1.5h3.5l7,7v-20L5.5,7.5L5.5,7.5z"
      />
       
      <path
        d="M20,2.5c2.2,1.9,3.5,4.8,3.5,8s-1.3,6.1-3.5,8"
      />
       
      <path
        d="M17.5,4.5c1.7,1.4,3,3.7,3,6c0,2.3-1.3,4.6-3,6"
      />
       
      <path
        d="M15.5,7c1.1,0.8,2,2,2,3.5s-0.9,2.7-2,3.5"
      />
    </g>
  </g>
</svg>
`;

exports[`Icon props should render type 'transcripts' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="25"
  stroke-linejoin="round"
  stroke-miterlimit="1.414"
  viewBox="0 0 50 50"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="currentColor"
  >
    <path
      d="M4 10v26h12v10l12-10h18V10H4zm2 2h38v22H27.009L18 41.7V34H6V12z"
    />
     
    <circle
      cx="15"
      cy="23"
      r="2.5"
    />
     
    <circle
      cx="25"
      cy="23"
      r="2.5"
    />
     
    <circle
      cx="35"
      cy="23"
      r="2.5"
    />
  </g>
</svg>
`;

exports[`Icon props should render type 'transcripts' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="25"
  stroke-linejoin="round"
  stroke-miterlimit="1.414"
  viewBox="0 0 50 50"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="#fff"
  >
    <path
      d="M4 10v26h12v10l12-10h18V10H4zm2 2h38v22H27.009L18 41.7V34H6V12z"
    />
     
    <circle
      cx="15"
      cy="23"
      r="2.5"
    />
     
    <circle
      cx="25"
      cy="23"
      r="2.5"
    />
     
    <circle
      cx="35"
      cy="23"
      r="2.5"
    />
  </g>
</svg>
`;

exports[`Icon props should render type 'transcripts' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="20"
  stroke-linejoin="round"
  stroke-miterlimit="1.414"
  viewBox="0 0 50 50"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="currentColor"
  >
    <path
      d="M4 10v26h12v10l12-10h18V10H4zm2 2h38v22H27.009L18 41.7V34H6V12z"
    />
     
    <circle
      cx="15"
      cy="23"
      r="2.5"
    />
     
    <circle
      cx="25"
      cy="23"
      r="2.5"
    />
     
    <circle
      cx="35"
      cy="23"
      r="2.5"
    />
  </g>
</svg>
`;

exports[`Icon props should render type 'twitter' with prop background 1`] = `
<svg
  aria-hidden="true"
  background="#fff"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="30"
  stroke-linejoin="round"
  stroke-miterlimit="1.414"
  viewBox="0 0 16 16"
  width="30"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M16 3.038c-.59.26-1.22.437-1.885.517.677-.407 1.198-1.05 1.443-1.816-.634.37-1.337.64-2.085.79-.598-.64-1.45-1.04-2.396-1.04-1.812 0-3.282 1.47-3.282 3.28 0 .26.03.51.085.75-2.728-.13-5.147-1.44-6.766-3.42C.83 2.58.67 3.14.67 3.75c0 1.14.58 2.143 1.46 2.732-.538-.017-1.045-.165-1.487-.41v.04c0 1.59 1.13 2.918 2.633 3.22-.276.074-.566.114-.865.114-.21 0-.41-.02-.61-.058.42 1.304 1.63 2.253 3.07 2.28-1.12.88-2.54 1.404-4.07 1.404-.26 0-.52-.015-.78-.045 1.46.93 3.18 1.474 5.04 1.474 6.04 0 9.34-5 9.34-9.33 0-.14 0-.28-.01-.42.64-.46 1.2-1.04 1.64-1.7z"
    fill="currentColor"
    fill-rule="nonzero"
  />
</svg>
`;

exports[`Icon props should render type 'twitter' with prop color 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="30"
  stroke-linejoin="round"
  stroke-miterlimit="1.414"
  viewBox="0 0 16 16"
  width="30"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M16 3.038c-.59.26-1.22.437-1.885.517.677-.407 1.198-1.05 1.443-1.816-.634.37-1.337.64-2.085.79-.598-.64-1.45-1.04-2.396-1.04-1.812 0-3.282 1.47-3.282 3.28 0 .26.03.51.085.75-2.728-.13-5.147-1.44-6.766-3.42C.83 2.58.67 3.14.67 3.75c0 1.14.58 2.143 1.46 2.732-.538-.017-1.045-.165-1.487-.41v.04c0 1.59 1.13 2.918 2.633 3.22-.276.074-.566.114-.865.114-.21 0-.41-.02-.61-.058.42 1.304 1.63 2.253 3.07 2.28-1.12.88-2.54 1.404-4.07 1.404-.26 0-.52-.015-.78-.045 1.46.93 3.18 1.474 5.04 1.474 6.04 0 9.34-5 9.34-9.33 0-.14 0-.28-.01-.42.64-.46 1.2-1.04 1.64-1.7z"
    fill="#fff"
    fill-rule="nonzero"
  />
</svg>
`;

exports[`Icon props should render type 'twitter' with prop size 1`] = `
<svg
  aria-hidden="true"
  background="currentColor"
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="20"
  stroke-linejoin="round"
  stroke-miterlimit="1.414"
  viewBox="0 0 16 16"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M16 3.038c-.59.26-1.22.437-1.885.517.677-.407 1.198-1.05 1.443-1.816-.634.37-1.337.64-2.085.79-.598-.64-1.45-1.04-2.396-1.04-1.812 0-3.282 1.47-3.282 3.28 0 .26.03.51.085.75-2.728-.13-5.147-1.44-6.766-3.42C.83 2.58.67 3.14.67 3.75c0 1.14.58 2.143 1.46 2.732-.538-.017-1.045-.165-1.487-.41v.04c0 1.59 1.13 2.918 2.633 3.22-.276.074-.566.114-.865.114-.21 0-.41-.02-.61-.058.42 1.304 1.63 2.253 3.07 2.28-1.12.88-2.54 1.404-4.07 1.404-.26 0-.52-.015-.78-.045 1.46.93 3.18 1.474 5.04 1.474 6.04 0 9.34-5 9.34-9.33 0-.14 0-.28-.01-.42.64-.46 1.2-1.04 1.64-1.7z"
    fill="currentColor"
    fill-rule="nonzero"
  />
</svg>
`;
